--- a/Obligatorio/header.html
+++ b/Obligatorio/header.html
@@ -36,15 +36,15 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title" id="myModalLabel">User LogIn</h4>
       </div>
-      <form id="logInForm" role="form">
+      <form id="logInForm" role="form" action="Login.php" method="POST">
           <div class="modal-body">
                 <div class="form-group">
-                  <label for="email">User:</label>
-                  <input type="text" class="form-control" id="userName" placeholder="user" required>
+                  <label for="userName">User:</label>
+                  <input type="text" name="username" class="form-control" id="userName" placeholder="user" required>
                 </div>
                 <div class="form-group">
                   <label for="pwd">Password:</label>
-                  <input type="password" class="form-control" id="pwd" placeholder="password" required>
+                  <input type="password" class="form-control" name="password" id="pwd" placeholder="password" required>
                 </div>
                 <!--<div class="checkbox">
                   <label><input type="checkbox"> Remember me</label>
@@ -52,7 +52,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-primary">Log In!</button>
+            <button type="submit" class="btn btn-primary">Log In</button>
           </div>  
       </form>
       
