--- a/Obligatorio/modalLogIn.html
+++ b/Obligatorio/modalLogIn.html
@@ -9,12 +9,14 @@
             <form id="logInForm" role="form">
                 <div class="modal-body">
                     <div class="form-group">
-                        <label for="email">User:</label>
-                        <input type="text" class="form-control" id="userName" placeholder="Enter user" required>
+                        <label>User:
+                            <input type="text" class="form-control" id="userName" placeholder="Enter user" required>
+                        </label>
                     </div>
                     <div class="form-group">
-                        <label for="pwd">Password:</label>
+                        <label>Password:
                         <input type="password" class="form-control" id="pwd" placeholder="Enter password" required>
+                        </label>
                     </div>
                     <!--<div class="checkbox">
                       <label><input type="checkbox"> Remember me</label>
