--- a/Obligatorio/header.html
+++ b/Obligatorio/header.html
@@ -18,7 +18,8 @@
                             <a href="videoList.php">All videos</a>
                         </li>
                         <li>
-                            <a data-toggle="modal" data-target="#myModal" href="#">Log In</a>
+                            <a id="logIn" data-toggle="modal" data-target="#myModal" href="#">Log In</a>
+                            <a id="logOut" class="hide" href="">Log Out</a>
                         </li>
                     </ul>
                 </div>
