--- a/Obligatorio/header.html
+++ b/Obligatorio/header.html
@@ -39,16 +39,13 @@
       <form id="logInForm" role="form">
           <div class="modal-body">
                 <div class="form-group">
-                  <label for="email">User:</label>
+                  <label for="userName">User:</label>
                   <input type="text" class="form-control" id="userName" placeholder="user" required>
                 </div>
                 <div class="form-group">
                   <label for="pwd">Password:</label>
                   <input type="password" class="form-control" id="pwd" placeholder="password" required>
                 </div>
-                <!--<div class="checkbox">
-                  <label><input type="checkbox"> Remember me</label>
-                </div> -->
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -60,3 +57,4 @@
   </div>
 </div>
 <!-- /.Modal Log In-->
+
