--- a/Obligatorio/header.html
+++ b/Obligatorio/header.html
@@ -48,9 +48,12 @@
                   <label for="pwd">Password:</label>
                   <input type="password" class="form-control" name="password" id="pwd" placeholder="password" required>
                 </div>
+                <div class="form-group hide">
+                    <span id="logInErrors" class="error"></span>
+                </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button id="closeModal" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             <button type="submit" class="btn btn-primary">Log In</button>
           </div>  
       </form>
